--- a/hosts.yml
+++ b/hosts.yml
@@ -1,7 +1,19 @@
 all:
   hosts:
   children:
+    common:
+      hosts:
+        95.179.155.167:
     postgres:
       hosts:
-        78.141.216.247:
+        95.179.155.167:
+    idempiere_common:
+      hosts:
+        95.179.155.167:
+    idempiere_db:
+      hosts:
+        95.179.155.167:
+    idempiere:
+      hosts:
+        95.179.155.167:
 
