--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,12 +5,13 @@
   register: ansible_state_roles_common
 - name: Installing common role
   block:
-  - name: Install python3-pip
+  - name: Install "{{ packages }}"
     apt:
       name: "{{ packages }}"
     vars:
       packages:
       - python3-pip
+      - unzip
     become: yes
   - name: Install common bash profile
     copy:
