role idempiere_standalone_server

--- a/hosts.yml
+++ b/hosts.yml
@@ -3,17 +3,23 @@ all:
   children:
     common:
       hosts:
-        95.179.155.167:
+        45.32.238.119:
     postgres:
       hosts:
-        95.179.155.167:
+        45.32.238.119:
     idempiere_common:
       hosts:
-        95.179.155.167:
+        45.32.238.119:
     idempiere_db:
       hosts:
-        95.179.155.167:
+        45.32.238.119:
     idempiere:
       hosts:
-        95.179.155.167:
+        45.32.238.119:
+    idempiere_standalone_db:
+      hosts:
+        136.244.110.122:
+    idempiere_standalone_server:
+      hosts:
+        136.244.103.195:
 
