--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -8,6 +8,7 @@
   - name: Install "{{ packages }}"
     apt:
       name: "{{ packages }}"
+      update_cache: yes
     vars:
       packages:
       - python3-pip
